--- a/haproxy.tmpl
+++ b/haproxy.tmpl
@@ -14,13 +14,13 @@ defaults
   timeout connect 5000
   timeout client 50000
   timeout server 5000
-  errorfile 400 /etc/haproxy/errors/400.http
-  errorfile 403 /etc/haproxy/errors/403.http
-  errorfile 408 /etc/haproxy/errors/408.http
-  errorfile 500 /etc/haproxy/errors/500.http
-  errorfile 502 /etc/haproxy/errors/502.http
-  errorfile 503 /etc/haproxy/errors/503.http
-  errorfile 504 /etc/haproxy/errors/504.http
+  errorfile 400 /usr/local/etc/haproxy/errors/400.http
+  errorfile 403 /usr/local/etc/haproxy/errors/403.http
+  errorfile 408 /usr/local/etc/haproxy/errors/408.http
+  errorfile 500 /usr/local/etc/haproxy/errors/500.http
+  errorfile 502 /usr/local/etc/haproxy/errors/502.http
+  errorfile 503 /usr/local/etc/haproxy/errors/503.http
+  errorfile 504 /usr/local/etc/haproxy/errors/504.http
 
 listen stats :8080
   stats enable
