--- a/haproxy.tmpl
+++ b/haproxy.tmpl
@@ -21,6 +21,9 @@ defaults
   errorfile 502 /usr/local/etc/haproxy/errors/502.http
   errorfile 503 /usr/local/etc/haproxy/errors/503.http
   errorfile 504 /usr/local/etc/haproxy/errors/504.http
+  stats enable
+  stats uri     /admin?stats
+  stats refresh 5s
 
 frontend http-in
     bind *:80
@@ -32,8 +35,3 @@ http-check expect ! rstring ^Max concurrent jobs reached
 {{range gets "/services/<<SVC_NAME>>-<<SVC_PORT>>/*"}}{{ $keystring := split .Key "/" }}      server {{index $keystring 3}} {{.Value}} check
 {{end}}
 
-backend private_monitoring
-    stats enable
-    stats uri     /
-    stats refresh 5s
-    bind *:8080
