--- a/haproxy.tmpl
+++ b/haproxy.tmpl
@@ -28,7 +28,7 @@ frontend http-in
 
 backend loadGens
 mode http
-http-check expect ! rstring "^Max concurrent jobs reached"
+http-check expect ! rstring "^Max concurrent jobs reached.*"
 {{range gets "/services/<<SVC_NAME>>-<<SVC_PORT>>/*"}}{{ $keystring := split .Key "/" }}      server {{index $keystring 3}} {{.Value}} check
 {{end}}
 
